feature(edit-request): users should be able to edit requests with status Pending [finishes #168050024]
