# src/routes/index.js
@@ -6,6 +6,7 @@ import AuthRoutes from './AuthRoutes';
 import UserRoutes from './UserRoutes';
 import AdminRoute from './AdminRoutes';
 import AccommodationRoutes from './AccomodationsRoutes';
+import RequestRoute from './RequestRoutes';
 
 const router = new Router();
 
@@ -16,5 +17,6 @@ router.use('/accommodations', AccommodationRoutes);
 router.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDoc));
 
 router.use('/admin', AdminRoute);
+router.use('/requests', RequestRoute);
 
 export default router;
